syntax = "proto3";

package swarmer;

service Swarm {
  rpc Ping (PingRequest) returns (PingResponse);
  rpc Query (QueryRequest) returns (stream QueryResponse);
}

message PingRequest {
  bytes signature = 1;
  string multiAddress = 2;
}

message PingResponse {
  bytes signature = 1;
  string multiAddress = 2;
}

message QueryRequest {
  bytes signature = 1;
  string address = 2;
}

message QueryResponse {
  bytes signature = 1;
  string multiAddress = 2;
}